# ins_advisor_agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: agent.yaml  cost_budget.yaml  database.yaml  domain_skills.yaml  general_capabilities.yaml  guardrails.yaml  langsmith.yaml  memory.yaml  models.yaml  rag.yaml  retrieval.yaml  sales_intelligence.yaml  states.yaml  tools.yaml  workflow.yaml
data/sales_insight_cards/: example_card.json
dify/: README.md  workflow.yml
dify/nodes/: capability_router.md  compliance_reviewer.md  context_builder.md  domain_tool_router.md  final_response.md  general_tool_router.md  intent_router.md  sales_intelligence_router.md  state_updater.md  strategy_generator.md  tool_result_verifier.md  workflow_router.md
docs/: agentic-tool-loop.md  architecture.md  clarify-and-interrupt.md  context-engineering.md  conversation-flows.md  cost-control.md  database-schema.sql  dify-integration.md  domain-skills.md  evaluation.md  evaluator-optimizer.md  general-capabilities.md  guardrails.md  human-in-the-loop.md  interview-guide.md  interview-processing.md  known-limitations.md  langsmith-integration.md  logging-and-comments-policy.md  memory-system.md  memory.md  observability.md  product-contract.md  production-readiness-checklist.md  project-structure.md  rag.md  request-lifecycle-flowchart.md  retry-recovery.md  sales-corpus-usage.md  sales-intelligence-layer.md  start-here.md  state-machine.md  streaming-events.md  tool-system.md  workflow.md
evals/: dataset.jsonl  run_evals.py
migrations/: 001_initial_pgvector.sql
scripts/: db_downgrade.py  db_upgrade.py  export_dify.sh  import_dify.sh  ingest_interviews.sh  run_evals.sh  run_local.sh
src/agent_core/: __init__.py
src/agent_core/agentic_loop/: __init__.py  planner.py  schemas.py
src/agent_core/api/: __init__.py  middleware.py  routes.py  schemas.py  server.py
src/agent_core/capabilities/: __init__.py  calculator.py  file_parser.py  knowledge_search.py  news_search.py  registry.py  router.py  summarizer.py  time_date.py  translation.py  unit_converter.py  weather.py  web_page_reader.py  web_search.py
src/agent_core/config/: __init__.py  runtime.py
src/agent_core/context/: __init__.py  builder.py  compression.py  source_boundary.py
src/agent_core/cost/: __init__.py  budget.py  model_router.py
src/agent_core/evals/: __init__.py  evaluators.py  feedback.py  langsmith_dataset.py  langsmith_runner.py
src/agent_core/graph/: __init__.py  builder.py  checkpoints.py  edges.py  intent_classifier.py  nodes.py  state.py
src/agent_core/guardrails/: __init__.py  combiner.py  human_approval.py  input.py  llm_judge.py  output.py  output_pii.py  pii.py  policy.py  prompt_injection.py  schemas.py  tool_guardrails.py
src/agent_core/integrations/: __init__.py  dify_client.py  dify_webhook.py  langsmith_exporter.py
src/agent_core/memory/: __init__.py  business_schemas.py  business_store.py  compact_context.py  manager.py  policy.py  preference.py  recall.py  session.py  task.py  write_policy.py
src/agent_core/models/: __init__.py  client.py
src/agent_core/observability/: __init__.py  langsmith_callbacks.py  langsmith_client.py  logger.py  metrics.py  trace.py
src/agent_core/rag/: __init__.py  (+9 more)
tests/: test_agentic_tool_loop.py  test_business_memory_store.py  test_clarify_branch.py  test_compact_context.py  test_documentation_quality.py  test_integrations_and_evals.py  test_kyc_workflow_contract.py  test_main_entry.py  test_memory_recall_policy.py  test_memory_write_policy.py  test_output_pii_scan.py  test_production_contracts.py  test_production_runtime_wiring.py  test_rag_hybrid_memory_approval.py  test_response_evaluator_optimizer.py  test_retriever_and_guardrails.py  test_sales_corpus_patterns.py  test_sales_insight_schema.py  test_sales_pipeline.py  test_stream_events.py  test_tools_and_cost.py  test_trace_and_security.py  test_workflow_engine.py
(+48 files in other folders)
