# 文件说明：
# - 本文件是 Python 项目元数据和工具配置入口。
# - 依赖、pytest 路径和代码风格配置都在这里维护。

[project]
# 项目包名，pip install -e . 时使用。
name = "ins-advisor-agent"
# 当前本地框架版本；后续发布包或镜像时应同步更新。
version = "0.1.0"
# 项目描述用于包元数据和文档说明。
description = "Production Agent Framework with Insurance Advisor skill and Sales Intelligence Layer"
# 使用 Python 3.11+，因为项目使用现代类型语法和 Pydantic v2。
requires-python = ">=3.11"
# dependencies 是核心运行依赖；main.py、本地 workflow 和测试都会用到。
dependencies = [
  # Pydantic v2 用于 AgentState、意图/KYC、工具 Schema 和 API 等结构化模型。
  "pydantic>=2.7",
  # PyYAML 用于读取/导出 YAML 配置和 Dify workflow。
  "PyYAML>=6.0",
  # LangSmith SDK 提供已验证的 RunTree、自动批处理、flush 和多 Workspace Client 参数。
  "langsmith>=0.9.8,<1.0",
  # httpx 统一承载 OpenAI-compatible Chat/Embedding/Reranker HTTP 调用。
  "httpx>=0.27",
  # SQLAlchemy Core 用于 PostgreSQL / pgvector repository 和 migration runner。
  "SQLAlchemy>=2.0",
  # psycopg 是 PostgreSQL 生产连接驱动，配合 SQLAlchemy 使用。
  "psycopg[binary]>=3.2",
  # redis 用于限流、活跃意图、Session 消息窗口和分布式 runtime 状态。
  "redis>=5.0",
  # LangGraph Graph API 用于以显式 State、Node、Edge 和 Conditional Edge 编排现有同步工作流。
  "langgraph>=1.2.9,<2.0",
]

[project.optional-dependencies]
# api 分组只在需要启动 FastAPI 服务时安装。
api = [
  # FastAPI 提供 /agent/run 等 HTTP 接口。
  "fastapi>=0.111",
  # uvicorn 是 FastAPI 本地/生产 ASGI 运行器。
  "uvicorn>=0.30",
]
# dev 分组用于本地测试和持续集成。
dev = [
  # pytest 运行 tests/ 下的单元测试和集成测试。
  "pytest>=7.4",
  # alembic 可用于生产 migration 管理；本仓库同时提供轻量 SQL runner。
  "alembic>=1.13",
]
# reranker 分组提供本地 CrossEncoder 服务；模型权重仍在首次启动时由 sentence-transformers 下载。
reranker = [
  # sentence-transformers 封装 Hugging Face CrossEncoder，支持中文语义相关性重排。
  "sentence-transformers>=3.0",
]

[tool.setuptools.package-data]
# 将本地调试台随 agent_core.api 包一起发布，非 editable 安装时也能访问根路径页面。
"agent_core.api" = ["static/*.html"]

[tool.pytest.ini_options]
# pythonpath 指向 src，保证测试直接 import agent_core。
pythonpath = ["src"]
# testpaths 限定 pytest 只扫描 tests 目录，避免误收集脚本。
testpaths = ["tests"]

[tool.ruff]
# line-length 统一代码格式宽度，避免长注释/Field description 被过早折行。
line-length = 100
